started applying suggestions (mostly rewriting related work)

--- a/main.tex
+++ b/main.tex
@@ -33,19 +33,11 @@
 \IEEEauthorblockA{
 \textit{Instituto Superior Tecnico (IST), INESC-ID Lisboa}\\
 Lisbon, Portugal \\
-diogofjesus@inesc-id.pt}
-\and
-% \IEEEauthorblockN{2\textsuperscript{nd} Luís Veiga}
-\IEEEauthorblockN{Luís Veiga}
-% \IEEEauthorblockA{\textit{dept. name of organisation (of Aff.)} \\
-\IEEEauthorblockA{
-\textit{Instituto Superior Tecnico (IST), INESC-ID Lisboa}\\
-Lisbon, Portugal \\
-luis.veiga@inesc-id.pt}}
+diogofjesus@inesc-id.pt}}
 \maketitle
 
 \begin{abstract}
-Serverless computing has become a suitable cloud paradigm for many applications, prized for its operational ease, automatic scalability, and fine-grained pay-per-use pricing model. However, executing workflows--compositions of multiple tasks--in Function-as-a-Service (FaaS) environments remains inefficient. This inefficiency stems from the stateless nature of functions, and a heavy reliance on external services for intermediate data transfers and inter-function communication.
+Serverless computing has become a suitable cloud paradigm for many applications, prized for its operational ease, automatic scalability, and fine-grained pay-per-use pricing model. However, executing workflows, which are compositions of multiple tasks, in Function-as-a-Service (FaaS) environments remains inefficient. This inefficiency stems from the stateless nature of functions, and a heavy reliance on external services for intermediate data transfers and inter-function communication.
 
 In this document, we introduce a decentralized DAG engine that leverages historical metadata to plan and influence task scheduling. Our solution encompasses metadata management, static workflow planning, and a worker-level scheduling strategy designed to drive workflow execution with minimal synchronization. We compare our system against WUKONG, another decentralized serverless DAG engine, and Dask Distributed, a more traditional cluster-based DAG engine. Our evaluation demonstrates that utilizing historical information significantly improves performance and reduces resource utilization for workflows running on serverless platforms.
 \end{abstract}
@@ -57,23 +49,23 @@ Cloud Computing, Serverless, FaaS, Serverless Workflows, DAG, Metadata, Workflow
 \section{Introduction}
 \label{s:introduction}
 
-Function-as-a-Service (FaaS) represents a serverless cloud computing paradigm that simplifies application deployment by abstracting away infrastructure management. It provides automatic, elastic scalability—potentially without limit—along with a fine-grained, pay-per-use pricing model. This has led to its widespread adoption for event-driven systems, microservices, and web services on platforms like AWS Lambda\footnote{https://aws.amazon.com/pt/lambda/}, Azure Functions\footnote{https://azure.microsoft.com/en-us/products/functions}, and Google Cloud Functions\footnote{https://cloud.google.com/functions}. These applications typically benefit the most from FaaS because they are lightweight, stateless, and characterized by highly variable or unpredictable workloads, allowing them to leverage serverless platforms' on-demand scalability and cost-efficiency.
+Function-as-a-Service (FaaS) represents a serverless cloud computing paradigm that simplifies application deployment by abstracting away infrastructure management. It provides automatic, elastic scalability—potentially without limit—along with a fine-grained, pay-per-use pricing model. This has led to its widespread adoption for event-driven systems, microservices, and web services on platforms like AWS Lambda\footnote{\label{fn:aws-lambda}https://aws.amazon.com/pt/lambda/}, Azure Functions\footnote{\label{fn:azure-funcs}https://azure.microsoft.com/en-us/products/functions}, and Google Cloud Functions\footnote{\label{fn:google-cloud-functions}https://cloud.google.com/functions}. These applications typically benefit the most from FaaS because they are lightweight, stateless, and characterized by highly variable or unpredictable workloads, allowing them to leverage serverless platforms' on-demand scalability and cost-efficiency.
 
 This paradigm is also increasingly used to execute complex scientific and data processing workflows, such as the Cybershake~\cite{cybershake_workflow} seismic hazard analysis or Montage~\cite{montage_astronomy}, an astronomy image mosaicking workflow. These applications are structured as workflows—formally represented as Directed Acyclic Graphs (DAGs) of interdependent tasks. However, efficiently executing these complex workflows on serverless platforms remains a significant challenge. 
 
-Despite their advantages, serverless platforms present several limitations that complicate the execution of complex workflows. Cold starts can introduce unpredictable latency, particularly for short-lived functions, affecting overall workflow performance. The lack of direct inter-function communication means that tasks often have to rely on external services, such as message brokers or databases to exchange intermediate data, which can increase overhead and reduce efficiency. Interoperability between platforms is further limited by the use of platform-specific workflow definition languages, which restricts the portability of workflows across different serverless environments. Additionally, the stateless nature of functions, while simplifying scaling and fault tolerance, poses challenges for workflows that require persistent state or complex coordination. Finally, developers have limited control over the underlying infrastructure, restricting the ability to optimize resource usage or tune performance for specific workloads.
+Despite their advantages, serverless platforms present several limitations that complicate the execution of complex workflows. Since these platforms allow scaling down to zero resources to save costs, they can also introduce unpredictable latency, known as \textit{cold starts}~\cite{cold_starts_surey}, particularly for short-lived functions, affecting overall workflow performance. The lack of \textit{direct inter-function communication}~\cite{serverless_computing_drawbacks_survey_rw1} means that tasks often have to rely on external services, such as message brokers or databases to exchange intermediate data, which can increase overhead and reduce efficiency. Interoperability between platforms is further limited by the use of platform-specific workflow definition languages, which restricts the portability of workflows across different serverless environments. Additionally, while statelessness simplifies scaling and management, it can introduce overhead and complexity for applications that require continuity or coordination across multiple function invocations. Finally, developers have limited control over the underlying infrastructure, restricting the ability to optimize resource usage or tune performance for specific workloads.
 
-Existing solutions, including commercial stateful functions (e.g., AWS Step Functions\footnote{https://aws.amazon.com/pt/step-functions/}, Azure Durable Functions\footnote{https://azure.microsoft.com/en-us/products/functions}, and Google Cloud Workflows\footnote{https://cloud.google.com/workflows}) and research prototypes (PyWren~\cite{pywren}, WUKONG~\cite{wukong_2}, Unum~\cite{unum_decentralized_orchestrator}, DEWEv3~\cite{dewe_v3}) attempt to mitigate some of the limitations of serverless platforms through high-level strategies such as innovative scheduling and optimizations that try to achieve better locality, by moving computation closer to the data. Other research projects try to address the core FaaS limitations directly, either through architectural modification proposals (e.g., Faa\$T~\cite{faast_caching}, Palette~\cite{palette_load_balancing}, Lambdata~\cite{lambdata_intents}) or by proposing entirely new serverless architectures (e.g., OpenFaaS~\cite{openfaas}, Apache OpenWhisk~\cite{open_whisk}, Knative~\cite{knative}).
+Several solutions have emerged to address the limitations of serverless platforms. Stateful functions (e.g., AWS Step Functions\footnote{\label{fn:aws-step-functions}https://aws.amazon.com/pt/step-functions/}, Azure Durable Functions\footnote{\label{fn:azure-durable-functions}https://learn.microsoft.com/en-us/azure/azure-functions/durable/durable-functions-overview?tabs=in-process\%2Cnodejs-v3\%2Cv1-model\&pivots=csharp}, and Google Cloud Workflows\footnote{\label{fn:google-cloud-workflows}https://cloud.google.com/workflows}) expand the range of applications that can run on serverless platforms by maintaining state across multiple function invocations, coordinating complex workflows, and providing built-in fault tolerance. Other approaches tackle limitations at the runtime level, proposing extensions to FaaS platforms (e.g., Faa\$T~\cite{faast_caching}, Palette~\cite{palette_load_balancing}, Lambdata~\cite{lambdata_intents}) or entirely new serverless architectures (e.g., Apache OpenWhisk~\cite{open_whisk}). Finally, some workflow-focused solutions (e.g., WUKONG~\cite{wukong_2}, Unum~\cite{unum_decentralized_orchestrator}, DEWEv3~\cite{dewe_v3}) employ scheduling strategies and workflow-level optimizations to enhance efficiency, primarily by improving data locality to bring computation closer to the data and minimize reliance on external services.
 
-These approaches, however, often rely on “one-step scheduling,” making decisions based solely on the immediate workflow stage without considering the broader context or the downstream effects on the overall workflow. This limitation motivated the central research question of this work: if we have knowledge of the computation steps, collect sufficient metrics on their behavior, and understand how they are composed to form the full workflow, can we leverage this information to make smarter scheduling decisions that minimize makespan and maximize resource efficiency in a FaaS environment?
+These workflow-focused approaches, however, often rely on “one-step scheduling,” making decisions based solely on the immediate workflow stage without considering the broader context or the downstream effects on their decisions. This limitation motivates the central research question of this work: if we have knowledge of the computation steps, collect sufficient metrics on their behavior, and understand how they are composed to form the full workflow, can we leverage this information to make smarter scheduling decisions that minimize makespan and maximize resource efficiency in a FaaS environment?
 
-To answer this research question, we propose a decentralized serverless workflow execution engine that leverages historical metadata from previous workflow runs to generate informed task allocation plans, which are then executed by FaaS workers in a choreographed manner, without needing a central scheduler. By relying on such planning, our approach aims to minimize the use of external services, which are often employed by similar solutions for intermediate data exchange, thereby improving efficiency and reducing overhead.
+To answer this research question, we propose a decentralized serverless workflow execution engine that leverages historical metadata from previous workflow runs to generate informed task allocation plans, which are then executed by FaaS workers in a choreographed manner, without needing a central scheduler. By relying on such planning, our approach aims to minimize the usage of external cloud storage services, which are often employed by similar solutions for intermediate data exchange and synchronization, thereby improving efficiency and reducing overhead.
 
 The main contributions of this work are as follows:
 \begin{itemize}
-    \item Analyze the serverless workflow orchestration research landscape;
-    \item Propose a decentralized serverless workflow execution engine that uses historical information to create workflow execution plans;
-    \item Understand how using historical information can be used to improve workflow execution on FaaS platforms.
+    \item Analysis of the serverless workflow orchestration research landscape;
+    \item Propose a decentralized serverless workflow execution engine that overcomes the "one-step scheduling" limitation of existing workflow-focused solutions by leveraging historical metadata to generate informed execution plans;
+    \item Demonstrate how incorporating historical execution data can improve task allocation, reduce reliance on external cloud storage services, and enhance overall workflow efficiency on FaaS platforms.
 \end{itemize}
 
 % ------------------------------------------------ %
@@ -81,15 +73,27 @@ The main contributions of this work are as follows:
 \section{Related Work}
 \label{s:related_work}
 
-Our work builds upon and differs from existing research in serverless workflow orchestration, which can be broadly categorized into \textbf{cloud-native stateful services}, \textbf{FaaS runtime extensions}, and \textbf{decentralized serverless schedulers}.
+% TODO: introductory section text
 
-\subsection{Cloud-Native Stateful Orchestration}
-Commercial platforms like AWS Step Functions~\footnote{https://aws.amazon.com/pt/step-functions/}, Azure Durable Functions~\footnote{https://learn.microsoft.com/en-us/azure/azure-functions/durable/durable-functions-overview}, and Google Cloud Workflows~\footnote{https://cloud.google.com/workflows} provide a managed solution for composing serverless functions into workflows. They handle state persistence and fault tolerance, abstracting orchestration complexity from the developer. However, they are often tightly coupled with their provider's ecosystem, can introduce vendor lock-in, and are generally designed for reliability and ease of use rather than performance, optimal resource usage or data locality.
+\subsection{Traditional Workflow Scheduling}
+Traditionally, executing computation workflows has relied on distributed data processing frameworks designed to manage computation and data across clusters of machines. Frameworks such as Hadoop~\cite{apache_hadoop}, Apache Spark~\cite{apache_spark}, and Apache Flink~\cite{apache_flink} provide abstractions for parallel and distributed execution, enabling efficient coordination, scheduling, and data movement across clusters. A key programming model that influenced these systems is MapReduce~\cite{mapreduce}, which allows developers to process massive datasets by implementing simple \texttt{map} and \texttt{reduce} operations, with canonical example jobs like WordCount. Spark and Flink extend this model with in-memory processing and stream-oriented computation. More recently, Dask~\cite{dask_python} has emerged as a flexible Python-based framework that enables parallel and distributed execution of complex task graphs. Unlike traditional MapReduce-style frameworks, Dask supports a more generic programming model that goes beyond simple map and reduce operations, allowing execution of heterogeneous tasks across clusters while maintaining ease of integration with Python libraries. Dask is particularly well-suited for data science applications due to its seamless integration with NumPy, Pandas, and other libraries, and its ability to handle large-scale mathematical computations efficiently and in a distributed manner, through Dask Distributed~\cite{dask_python_distributed}.
+
+Collectively, these frameworks rely on clusters of machines to distribute computation and manage data, providing scalability and parallelism for large-scale workflows. They offer several advantages, including control over the underlying system, easier to achieve better data locality, efficient use of dedicated resources, and the flexibility to fine-tune scheduling and execution policies. These features make them well-suited for complex, resource-intensive workloads where predictable performance is critical. However, the cluster-based approach also introduces overheads and has inherent limitations related to ease-of-use, deployment, resource provisioning, and slow resource scaling, which can limit performance and efficiency, particularly for dynamic and embarrassingly parallel workflows.
+
+\subsection{Cloud-Native Workflow Scheduling}
+Traditional cluster-based frameworks often require significant expertise to configure, deploy, and maintain. Cloud-native workflow solutions provide a higher-level, managed approach, enabling developers to orchestrate workflows without worrying as much about underlying infrastructure. These platforms simplify deployment, and automatically handle resource allocation, fault tolerance, and state management.
+
+Prominent commercial serverless workflow platforms, also referred to as \textbf{stateful functions}, include AWS Step Functions~\textsuperscript{\ref{fn:aws-step-functions}}, Azure Durable Functions~\textsuperscript{\ref{fn:azure-durable-functions}}, and Google Cloud Workflows~\textsuperscript{\ref{fn:google-cloud-workflows}}. These solutions allow the user to create workflows by composing \textit{stateless} functions together. The platform is then responsible for the orchestration part, managing workflow state, intermediate results, and fault tolerance without requiring developers to implement state management themselves. These platforms typically employ \textit{checkpointing} techniques to persist workflow state, allowing the orchestrator or stateful function to pause while waiting for stages of the workflow to complete and then resume execution to trigger subsequent stages. Checkpointing also ensures that workflow execution can recover correctly after failures. 
+
+This orchestration and management capability is typically billed separately, reflecting both the convenience and reliability it provides and the additional resources required to maintain workflow state and fault tolerance. The main differences among these platforms lie in their execution model, workflow definition, and target use cases. Both AWS Step Functions and Google Cloud Workflows use JSON to represent workflow state machines, while Azure Durable Functions provides a more flexible programming model, where workflows are defined in code. One advantage of using such commercial services is that integration with other cloud services is easier, as they are tightly integrated with the AWS, Azure, and Google Cloud ecosystems.
+
+In addition, there are also open-source workflow orchestration projects that run on general-purpose cloud or on-premises infrastructure, combatting vendor lock-in by providing better interoperability and flexibility. Apache Airflow~\cite{apache_airflow} is a widely used example, allowing workflows to easily be defined in Python code. It provides fine-grained scheduling, monitoring, and retry policies, being mostly used for ETL ~\footnote{\label{fn:etl}https://pt.wikipedia.org/wiki/Extract,\_transform,\_load} processes, machine learning workflows, and batch data processing. Another open-source alternative is Luigi~\footnote{\label{fn:luigi}https://github.com/spotify/luigi}, also a Python-based workflow framework, developed and used at Spotify for managing complex batch data pipelines.
 
 \subsection{FaaS Runtime Extensions for Data Locality}
 A body of work seeks to address the fundamental data exchange inefficiency in serverless platforms through runtime modifications. \textbf{Palette}~\cite{palette_load_balancing} introduces locality ``hints'' to co-locate related function invocations on the same worker. \textbf{Faa\$T}~\cite{faast_caching} provides a transparent, auto-scaling distributed cache for serverless functions. \textbf{Lambdata}~\cite{lambdata_intents} requires developers to declare data intents (input/output objects) to enable data-aware scheduling. These solutions demonstrate the significant performance gains possible by improving data locality, but often require modifications to the application code or the underlying FaaS platform itself, limiting their portability and adoption.
 
-\subsection{Decentralized Serverless Schedulers}
+\subsection{Serverless Workflow Scheduling}
+
 Several frameworks have been designed to execute workflows efficiently on unmodified serverless infrastructure. \textbf{PyWren}~\cite{pywren} is an early orchestrator for embarrassingly parallel computations, but its simple design can be inefficient for more complex workflows. \textbf{Unum}~\cite{unum_decentralized_orchestrator} decentralizes orchestration logic by embedding it within application code, allowing portability across different cloud providers, but offering limited data locality optimizations.
 
 The most directly comparable work to ours is \textbf{WUKONG}~\cite{wukong_2}, a decentralized DAG engine that uses static scheduling and runtime optimizations to minimize data movement. WUKONG's key innovations include:
