--- a/references.bib
+++ b/references.bib
@@ -89,6 +89,17 @@ series = {SoCC '20}
 }
 
 %% SURVEYS
+@article{cold_starts_surey,
+  title={Cold start latency in serverless computing: A systematic review, taxonomy, and future directions},
+  author={Golec, Muhammed and Walia, Guneet Kaur and Kumar, Mohit and Cuadrado, Felix and Gill, Sukhpal Singh and Uhlig, Steve},
+  journal={ACM Computing Surveys},
+  volume={57},
+  number={3},
+  pages={1--36},
+  year={2024},
+  publisher={ACM New York, NY}
+}
+
 @article{bot_survey,
   title={A review on task scheduling techniques in cloud and fog computing: Taxonomy, tools, open issues, challenges, and future directions},
   author={Khan, Zulfiqar Ali and Aziz, Izzatdin Abdul and Osman, Nurul Aida Bt and Ullah, Israr},
@@ -169,6 +180,25 @@ URL = {https://doi.org/10.1177/1094342017704893}
 
 
 %% PAPERS
+@inproceedings{mapreduce,
+title = {MapReduce: simplified data processing on large clusters},
+author = {Dean, Jeffrey and Ghemawat, Sanjay},
+year = {2008},
+issue_date = {January 2008},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {51},
+number = {1},
+issn = {0001-0782},
+url = {https://doi.org/10.1145/1327452.1327492},
+doi = {10.1145/1327452.1327492},
+abstract = {MapReduce is a programming model and an associated implementation for processing and generating large datasets that is amenable to a broad variety of real-world tasks. Users specify the computation in terms of a map and a reduce function, and the underlying runtime system automatically parallelizes the computation across large-scale clusters of machines, handles machine failures, and schedules inter-machine communication to make efficient use of the network and disks. Programmers find the system easy to use: more than ten thousand distinct MapReduce programs have been implemented internally at Google over the past four years, and an average of one hundred thousand MapReduce jobs are executed on Google's clusters every day, processing a total of more than twenty petabytes of data per day.},
+journal = {Commun. ACM},
+month = jan,
+pages = {107-113},
+numpages = {7}
+}
+
 @inproceedings{lambdata_intents,
   title={Lambdata: Optimizing serverless computing by making data intents explicit},
   author={Tang, Yang and Yang, Junfeng},
@@ -484,14 +514,6 @@ series = {SoCC '21}
   title        = {Apache Hadoop},
   year         = {},
   url          = {https://hadoop.apache.org/},
-  urldate      = {2024-12-1}
-}
-
-@online{mapreduce,
-  author       = {},
-  title        = {MapReduce programming model},
-  year         = {},
-  url          = {https://en.wikipedia.org/wiki/MapReduce},
   urldate      = {2024-12-1}
 }
 
