--- a/main.tex
+++ b/main.tex
@@ -83,27 +83,47 @@ Collectively, these frameworks rely on clusters of machines to distribute comput
 \subsection{Cloud-Native Workflow Scheduling}
 Traditional cluster-based frameworks often require significant expertise to configure, deploy, and maintain. Cloud-native workflow solutions provide a higher-level, managed approach, enabling developers to orchestrate workflows without worrying as much about underlying infrastructure. These platforms simplify deployment, and automatically handle resource allocation, fault tolerance, and state management.
 
-Prominent commercial serverless workflow platforms, also referred to as \textbf{stateful functions}, include AWS Step Functions~\textsuperscript{\ref{fn:aws-step-functions}}, Azure Durable Functions~\textsuperscript{\ref{fn:azure-durable-functions}}, and Google Cloud Workflows~\textsuperscript{\ref{fn:google-cloud-workflows}}. These solutions allow the user to create workflows by composing \textit{stateless} functions together. The platform is then responsible for the orchestration part, managing workflow state, intermediate results, and fault tolerance without requiring developers to implement state management themselves. These platforms typically employ \textit{checkpointing} techniques to persist workflow state, allowing the orchestrator or stateful function to pause while waiting for stages of the workflow to complete and then resume execution to trigger subsequent stages. Checkpointing also ensures that workflow execution can recover correctly after failures. 
+Prominent commercial serverless workflow platforms, also referred to as \textbf{stateful functions}, include AWS Step Functions~\textsuperscript{\ref{fn:aws-step-functions}}, Azure Durable Functions~\textsuperscript{\ref{fn:azure-durable-functions}}, and Google Cloud Workflows~\textsuperscript{\ref{fn:google-cloud-workflows}}. These solutions allow the user to create workflows by composing \textit{stateless} functions together. The platform is then responsible for the orchestration part, managing workflow state, intermediate results, and fault tolerance without requiring developers to implement state management themselves. These platforms typically employ \textit{checkpointing} techniques to persist workflow state, allowing the orchestrator or stateful function to pause while waiting for stages of the workflow to complete and then resume execution to trigger subsequent stages. Checkpointing also ensures that workflow execution can recover correctly after failures.
 
 This orchestration and management capability is typically billed separately, reflecting both the convenience and reliability it provides and the additional resources required to maintain workflow state and fault tolerance. The main differences among these platforms lie in their execution model, workflow definition, and target use cases. Both AWS Step Functions and Google Cloud Workflows use JSON to represent workflow state machines, while Azure Durable Functions provides a more flexible programming model, where workflows are defined in code. One advantage of using such commercial services is that integration with other cloud services is easier, as they are tightly integrated with the AWS, Azure, and Google Cloud ecosystems.
 
-In addition, there are also open-source workflow orchestration projects that run on general-purpose cloud or on-premises infrastructure, combatting vendor lock-in by providing better interoperability and flexibility. Apache Airflow~\cite{apache_airflow} is a widely used example, allowing workflows to easily be defined in Python code. It provides fine-grained scheduling, monitoring, and retry policies, being mostly used for ETL ~\footnote{\label{fn:etl}https://pt.wikipedia.org/wiki/Extract,\_transform,\_load} processes, machine learning workflows, and batch data processing. Another open-source alternative is Luigi~\footnote{\label{fn:luigi}https://github.com/spotify/luigi}, also a Python-based workflow framework, developed and used at Spotify for managing complex batch data pipelines.
+In addition, there are also open-source workflow orchestration projects that run on general-purpose cloud or on-premises infrastructure, combatting vendor lock-in by providing better interoperability and flexibility. Apache Airflow~\cite{apache_airflow} is a widely used example, allowing workflows to easily be defined in Python code. Airflow has a rich ecosystem of pre-built integrations for databases, message queues, and major cloud services, simplifying the connection of workflows to diverse external services. It is mostly used for ETL ~\footnote{\label{fn:etl}https://pt.wikipedia.org/wiki/Extract,\_transform,\_load} processes, machine learning workflows, and batch data processing.
 
-\subsection{FaaS Runtime Extensions for Data Locality}
-A body of work seeks to address the fundamental data exchange inefficiency in serverless platforms through runtime modifications. \textbf{Palette}~\cite{palette_load_balancing} introduces locality ``hints'' to co-locate related function invocations on the same worker. \textbf{Faa\$T}~\cite{faast_caching} provides a transparent, auto-scaling distributed cache for serverless functions. \textbf{Lambdata}~\cite{lambdata_intents} requires developers to declare data intents (input/output objects) to enable data-aware scheduling. These solutions demonstrate the significant performance gains possible by improving data locality, but often require modifications to the application code or the underlying FaaS platform itself, limiting their portability and adoption.
+\subsection{FaaS Runtime Extensions}
+While commercial and open-source workflow platforms simplify orchestration and state management, they generally operate on top of standard FaaS runtimes and cannot fully address the inefficiencies inherent in serverless platforms, such as cold starts, limited inter-function communication, and lack of data locality. To address these limitations, a significant body of research has focused on modifying the underlying FaaS runtime or proposing extensions that improve data locality and scheduling efficiency. Palette~\cite{palette_load_balancing}, Faa\$T~\cite{faast_caching}, and Lambdata~\cite{lambdata_intents} are three prominent examples of such extensions.
 
-\subsection{Serverless Workflow Scheduling}
+\subsubsection{Palette Load Balancing}
+Palette Load Balancing improves data locality by introducing the concept of \textit{colors} as \textit{locality hints}. These colors are parameters attached to function invocations, allowing users to express which invocations should be co-located on the same worker. Palette then attempts to route invocations with the same color to the same instance, enabling subsequent invocations to access locally cached data rather than fetching it from remote storage. Colors are treated as \textit{hints}, so the system can ignore them if resource constraints require it. This approach improves cache hit ratios, reduces data transfer costs, gives enough flexibility to users or systems leveraging the runtime to define coloring policies with different strategies.
 
-Several frameworks have been designed to execute workflows efficiently on unmodified serverless infrastructure. \textbf{PyWren}~\cite{pywren} is an early orchestrator for embarrassingly parallel computations, but its simple design can be inefficient for more complex workflows. \textbf{Unum}~\cite{unum_decentralized_orchestrator} decentralizes orchestration logic by embedding it within application code, allowing portability across different cloud providers, but offering limited data locality optimizations.
+\subsubsection{Faa\$T}
+Faa\$T provides a transparent, auto-scaling distributed cache for serverless functions. Each application has its own dedicated in-memory cache, called a \textit{cachelet}, which stores data accessed during function executions and makes it available for subsequent calls. Faa\$T's transparency is achieved by operating without requiring changes to application code, as it intercepts data requests and checks the cache before accessing remote storage. \textit{Cachelets} collaborate to form a distributed cache using consistent hashing, dynamically scaling up or down based on application workload.
 
-The most directly comparable work to ours is \textbf{WUKONG}~\cite{wukong_2}, a decentralized DAG engine that uses static scheduling and runtime optimizations to minimize data movement. WUKONG's key innovations include:
-\begin{itemize}
-    \item \textbf{Decentralized Scheduling:} Eliminating the central scheduler bottleneck;
-    \item \textbf{Task Clustering:} Forcing the execution of sequences of tasks on the same worker to reuse intermediate results and avoid using external storage;
-    \item \textbf{Delayed I/O:} Heuristically postponing data writes to external storage in the hope that dependent tasks can be executed locally.
-\end{itemize}
+\subsubsection{Lambdata}
+Lambdata focuses on optimizing data locality by using \textit{user-provided data intents}. Developers explicitly annotate functions with \textit{get\_data} and \textit{put\_data} parameters, specifying which data objects the function will read or write. Lambdata then uses these annotations to make informed scheduling decisions such as co-locating functions that share data and leveraging local caches to minimize remote data transfers. This approach simplifies deployment and integration, as it does not require a distributed cache or complex runtime modifications, but relies on accurate intent declarations to achieve effective data reuse.
 
-While WUKONG represents a significant advance, its scheduling and optimizations are based solely on the structure of the \textit{current} workflow DAG. It employs a \textbf{one-step scheduling} policy, making decisions using immediate runtime information without leveraging knowledge it has about the entire workflow. Besides that, WUKONG also uses optimizations based on heuristics, which can lead to suboptimal performance when workflow behavior deviates from expected patterns.
+Together, these FaaS runtime extensions illustrate different strategies for improving data locality and execution efficiency in serverless environments.
+
+\subsection{Serverless Workflow Scheduling Execution Engines}
+
+Several frameworks have been designed to execute workflows efficiently on \textbf{unmodified} FaaS infrastructure, each offering distinct approaches to address the challenges of stateless, distributed computing. These solutions represent significant innovations in workflow orchestration, with varying trade-offs in terms of scalability, data locality, architectural complexity and ease-of-use and inspired our work. Here we will mention the most relevant workflow execution engines built to run on top of FaaS.
+
+\subsubsection{DEWE v3}
+DEWE v3~\cite{dewe_v3} introduces an innovative hybrid approach to serverless workflow orchestration that combines the best aspects of both serverless and serverful computing models. This hybrid workflow execution engine intelligently distributes tasks based on their characteristics: \textit{short tasks} are run on FaaS workers while \textit{longer tasks} run on virtual machines. The system employs a queue-based job distribution mechanism where jobs expected to complete within FaaS limits are published to a common job queue for serverless execution, while long-running jobs are directed to a separate queue for local, serverful execution on dedicated servers. Jobs that fail to execute on FaaS workers, for being longer than expected and exceeding execution limits imposed by the platform, are redirected to the serverful queue. This dual-execution model enables DEWE to accommodate workflows with diverse resource consumption patterns. This system proves particularly effective for scientific workflows, such as Montage~\cite{montage_astronomy}, where task durations and resource requirements vary significantly. However, this hybrid approach introduces specific trade-offs. Latency-sensitive workflows may be slowed by job queuing overhead. In addition, hybrid deployments often lead to resource underutilization, as serverful workers may sit idle when most tasks are executed on FaaS. Finally, the centralized workflow manager can become a scalability bottleneck when handling many short tasks.
+
+\subsubsection{PyWren}
+PyWren~\cite{pywren}, representing one of the pioneering pure serverless approaches, demonstrates the potential and limitations of leveraging unmodified serverless infrastructure for distributed computation. Built atop AWS Lambda, PyWren focuses on executing arbitrary Python functions as stateless serverless functions with minimal user management overhead, automatically handling function execution, dependencies, S3 bucket storage for serialized code and intermediate data. The system is ideal for embarrassingly parallel workloads, also known as \textit{"bag-of-tasks"} scenarios, with many independent, parallel tasks such as simple data transformations, scientific simulations, parallel model training, and large-scale media processing. While PyWren’s serverless orchestration model provides excellent scalability and removes the burden of infrastructure management, its simplicity limits its applicability. It is not well-suited for workflows with complex dependency structures or those that require sharing large intermediate results through object storage. Moreover, latency-sensitive applications are disadvantaged by function cold starts, since PyWren does not include mechanisms to mitigate their impact.
+
+\subsubsection{Unum}
+Unum~\cite{unum_decentralized_orchestrator} takes a radically different approach by decentralizing orchestration logic entirely, eliminating the need for a standalone orchestrator service. This application-level serverless workflow orchestration system embeds orchestration logic directly into a library that wraps user-defined FaaS functions, leveraging a scalable consistent data store for coordination during fan-ins and execution correctness. Unum introduces an Intermediate Representation (IR) to capture node-local information about workflow progression and relies only on minimal, common serverless APIs (function invocation and basic data store operations) available across cloud platforms. This design choice provides exceptional portability and cost-effectiveness, as it can run on unmodified serverless infrastructure and compile workflow definitions from languages like AWS Step Functions and Google Cloud Workflows into its IR format. However, Unum's generic approach comes with trade-offs: it currently supports only statically defined control structures and cannot express workflows where the next step is determined dynamically at runtime, and it lacks data locality optimizations since it cannot force related tasks to execute on the same worker, with each FaaS function instance executing only its specific task before triggering the next function.
+
+\subsubsection{WUKONG}
+WUKONG~\cite{wukong_2} represents the most sophisticated approach among these solutions, designed as a decentralized locality-enhanced framework specifically for serverless parallel computing. WUKONG addresses the limitations of traditional serverful models like Dask Distributed while maximizing the advantages of serverless computing, focusing on improving Lambda scale-out speed, reducing deployment effort, and enhancing data locality to minimize large object movement. The system's architecture is divided into static components (operating before workflow execution) and dynamic components (operating during execution). The static scheduler includes a DAG Generator that converts Python code into DAGs using Dask, a Schedule Generator that creates n static schedules for n leaf nodes (each containing every reachable task in a depth-first search), Initial Task Executor Invokers that launch Lambda instances for each leaf task, and a Subscriber Process that downloads final results. The dynamic scheduling system features Lambda Executors that receive static schedules and execute tasks until encountering fan-outs, at which point they transfer data to intermediate storage and invoke new executors, with fan-in coordination handled through dynamic conflict resolution.
+
+WUKONG's key innovation lies in its three data locality optimization techniques designed to avoid moving large data objects. **Task Clustering for Fan-Out Operations** allows executors to continue executing downstream tasks when a fan-out task produces large outputs, effectively becoming executors for multiple fan-out targets rather than invoking new executors. **Task Clustering for Fan-In Operations** enables executors to recheck dependencies after uploading large objects to storage, potentially executing fan-in tasks themselves if dependencies are satisfied during the upload process. **Delayed I/O** allows executors to postpone storage decisions by executing ready fan-out tasks first and repeatedly rechecking unready tasks before committing to external storage, potentially avoiding downloads entirely if tasks become ready.
+
+These optimizations, combined with WUKONG's decentralized scheduling approach, significantly enhance performance compared to both Dask Distributed and PyWren by minimizing data transfer overhead and eliminating central scheduler bottlenecks. However, WUKONG shares the limitation of supporting only statically defined control structures, requiring workflow DAGs to be known ahead-of-time. Additionally, its optimization heuristics can lead to inefficiencies in certain scenarios: Delayed I/O may increase execution time if dependencies aren't met after retries, fan-in conflicts where multiple tasks produce large objects can result in resource waste depending on upload timing, and fan-out scenarios with small inputs may not justify the overhead of invoking multiple executors.
+
+While WUKONG represents a significant advance in serverless workflow orchestration, its scheduling and optimizations are based solely on the structure of the *current* workflow DAG, employing a **one-step scheduling** policy that makes decisions using immediate runtime information without leveraging comprehensive workflow knowledge. The system relies on heuristic-based optimizations that can lead to suboptimal performance when workflow behavior deviates from expected patterns, highlighting opportunities for more sophisticated scheduling approaches that consider global workflow characteristics and historical execution patterns.
 
 \subsection{Discussion}
 The Function-as-a-Service (FaaS) model offers a transformative approach to cloud computing by abstracting infrastructure management and enabling developers to focus on business logic. Despite current platform limitations, Serverless architectures have been widely adopted for event-driven applications, microservices, IoT processing, and web services.
